# serializer version: 1
# name: test_data_source_context[False-False]
  dict({
    'dataSource': dict({
      'edges': list([
      ]),
    }),
  })
# ---
# name: test_data_source_context[False-True]
  dict({
    'dataSource': dict({
      'edges': list([
        dict({
          'node': dict({
            'label': 'q: environmental-ten',
            'slug': 'option-without-context',
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_data_source_context[True-False]
  dict({
    'dataSource': dict({
      'edges': list([
      ]),
    }),
  })
# ---
# name: test_data_source_context[True-True]
  dict({
    'dataSource': dict({
      'edges': list([
        dict({
          'node': dict({
            'label': 'q: environmental-ten foo: bar',
            'slug': 'option-with-context',
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_data_source_defaults
  dict({
    'dataSource': dict({
      'edges': list([
        dict({
          'node': dict({
            'label': '1',
            'slug': '1',
          }),
        }),
        dict({
          'node': dict({
            'label': '2',
            'slug': '2',
          }),
        }),
        dict({
          'node': dict({
            'label': '3',
            'slug': '3',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjI=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 3,
    }),
  })
# ---
# name: test_fetch_data_from_data_source
  dict({
    'dataSource': dict({
      'edges': list([
        dict({
          'node': dict({
            'label': '1',
            'slug': '1',
          }),
        }),
        dict({
          'node': dict({
            'label': '5.5',
            'slug': '5.5',
          }),
        }),
        dict({
          'node': dict({
            'label': 'sdkj',
            'slug': 'sdkj',
          }),
        }),
        dict({
          'node': dict({
            'label': 'info',
            'slug': 'value',
          }),
        }),
        dict({
          'node': dict({
            'label': 'something',
            'slug': 'something',
          }),
        }),
        dict({
          'node': dict({
            'label': 'english description',
            'slug': 'translated_value',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjU=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 6,
    }),
  })
# ---
# name: test_fetch_data_from_data_source.1
  dict({
    'dataSource': dict({
      'edges': list([
        dict({
          'node': dict({
            'label': '1',
            'slug': '1',
          }),
        }),
        dict({
          'node': dict({
            'label': '5.5',
            'slug': '5.5',
          }),
        }),
        dict({
          'node': dict({
            'label': 'sdkj',
            'slug': 'sdkj',
          }),
        }),
        dict({
          'node': dict({
            'label': 'info',
            'slug': 'value',
          }),
        }),
        dict({
          'node': dict({
            'label': 'something',
            'slug': 'something',
          }),
        }),
        dict({
          'node': dict({
            'label': 'deutsche Beschreibung',
            'slug': 'translated_value',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjU=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 6,
    }),
  })
# ---
# name: test_fetch_data_from_data_source.2
  dict({
    'dataSource': dict({
      'edges': list([
        dict({
          'node': dict({
            'label': '1',
            'slug': '1',
          }),
        }),
        dict({
          'node': dict({
            'label': '5.5',
            'slug': '5.5',
          }),
        }),
        dict({
          'node': dict({
            'label': 'sdkj',
            'slug': 'sdkj',
          }),
        }),
        dict({
          'node': dict({
            'label': 'info',
            'slug': 'value',
          }),
        }),
        dict({
          'node': dict({
            'label': 'something',
            'slug': 'something',
          }),
        }),
        dict({
          'node': dict({
            'label': 'english description',
            'slug': 'translated_value',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjU=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 6,
    }),
  })
# ---
# name: test_fetch_data_sources
  dict({
    'allDataSources': dict({
      'edges': list([
        dict({
          'node': dict({
            'info': 'Nice test data source',
            'name': 'MyDataSource',
          }),
        }),
        dict({
          'node': dict({
            'info': 'Faulty test data source',
            'name': 'MyFaultyDataSource',
          }),
        }),
        dict({
          'node': dict({
            'info': 'Other faulty test data source',
            'name': 'MyOtherFaultyDataSource',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjI=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 3,
    }),
  })
# ---
# name: test_fetch_data_sources.1
  dict({
    'allDataSources': dict({
      'edges': list([
        dict({
          'node': dict({
            'info': 'Schöne Datenquelle',
            'name': 'MyDataSource',
          }),
        }),
        dict({
          'node': dict({
            'info': 'Faulty test data source',
            'name': 'MyFaultyDataSource',
          }),
        }),
        dict({
          'node': dict({
            'info': 'Other faulty test data source',
            'name': 'MyOtherFaultyDataSource',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjI=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 3,
    }),
  })
# ---
# name: test_fetch_data_sources.2
  dict({
    'allDataSources': dict({
      'edges': list([
        dict({
          'node': dict({
            'info': 'Nice test data source',
            'name': 'MyDataSource',
          }),
        }),
        dict({
          'node': dict({
            'info': 'Faulty test data source',
            'name': 'MyFaultyDataSource',
          }),
        }),
        dict({
          'node': dict({
            'info': 'Other faulty test data source',
            'name': 'MyOtherFaultyDataSource',
          }),
        }),
      ]),
      'pageInfo': dict({
        'endCursor': 'YXJyYXljb25uZWN0aW9uOjI=',
        'startCursor': 'YXJyYXljb25uZWN0aW9uOjA=',
      }),
      'totalCount': 3,
    }),
  })
# ---
